# poetry

./: backup_list.pickle
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo.egg-info/: PKG-INFO  requires.txt
