[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Harmandeep Singh Dubb <harmand1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.0"
matplotlib = "^3.2.1"
Pygithub = "^1.51"

[tool.poetry.dev-dependencies] 
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
